# LUX-Marketing

./: .gitignore  .replit  AGENT_CAPABILITIES.md  ANALYTICS_METRICS_DOCUMENTATION.md  CHANGELOG.md  CRM_FEATURES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DEPLOY_INSTRUCTIONS.txt  FINAL_QA_REPORT.md  MICROSOFT_365_INTEGRATION.md  PHASE_2_6_DEPLOYMENT.md  README-DEPLOYMENT.md  README.md  REGRESSION_TEST_CHECKLIST.md  RELEASE_NOTES.md  SSH_KEY_SETUP.md  STAGE_1_PROGRESS.md  TEST_CASES_PHASE_0-1.md  VPS-DEPLOYMENT-GUIDE.md  VPS_DEPLOYMENT_GUIDE.md  VPS_NAVIGATION_GUIDE.md  WOOCOMMERCE_INTEGRATION.md  advanced_config.py  agent_scheduler.py  ai_action_executor.py  ai_agent.py  ai_code_fixer.py  app.py  auth.py  auto_repair_service.py  backup.sh  complete_vps_update.sh  create-deployment-package.sh  create_complete_deployment.py  create_deployment.py  create_deployment_package.py  deploy-to-vps.sh  (+48 more)
agents/: __init__.py  advertising_agent.py  analytics_agent.py  app_agent.py  base_agent.py  brand_strategy_agent.py  content_seo_agent.py  creative_agent.py  email_crm_agent.py  market_intelligence_agent.py  operations_agent.py  retention_agent.py  sales_enablement_agent.py  social_media_agent.py
attached_assets/: Pasted--A-B-Testing-template-deployed-Test-both-pages-1-Analytics-https-lux-lucifercruz-com-analyti-1761040841969_1761040841969.txt  Pasted--Also-check-for-Python-syntax-errors-cd-var-www-lux-marketing-python3-m-py-compile-routes-py-Oct-1761030417061_1761030417062.txt  (+53 more)
evidence/: TEST_EVIDENCE_SUMMARY.md  (+1 more)
(+185 files in other folders)
